fee details page

--- a/src/assets/css/common/Modal.css
+++ b/src/assets/css/common/Modal.css
@@ -2,9 +2,9 @@
     background-color: var(--erp-sidebar-color);
 } */
 
-.btn_primary:hover {
+/* .btn_primary:hover {
     color: var(--erp-card-color);
-}
+} */
 
 .fs-s {
     font-size: var(--erp-fs-s);
