--- a/src/assets/css/common/Tab.css
+++ b/src/assets/css/common/Tab.css
@@ -1,7 +1,7 @@
-.nav-link.active {
+/* .nav-link.active {
     border-bottom: 2px solid var(--erp-green-400);
     color: var(--erp-green-400)
-}
+} */
 
 .bg_white {
     background-color: var(--erp-bg-white);
