--- a/src/index.css
+++ b/src/index.css
@@ -526,3 +526,13 @@ webkit-box-shadow: 0 1px 2px rgba(56,65,74,.15);
   transform: translateY(-7px);
     box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
 }
+
+.thead-fixed{
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+.table-container {
+  height: 500px; /* Set the height of the container */
+  overflow-y: auto; /* Enable vertical scrolling */
+}
