ui changes by vishakha

--- a/src/assets/css/common/Table.css
+++ b/src/assets/css/common/Table.css
@@ -224,3 +224,6 @@ img {
     border-color: var( --erp-sky-800) !important;
     color: var(--erp-white-color);
 }
+.bg-yellow{
+  background-color: var(--erp-yellow-100);
+}
