--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,8 @@ body,
   /* Changing colors */
 
   --erp-bg-color: #f3f3f9;
-  
+  --erp-input-border :#ced4da;
+  --erp-table-bottom-border : #fff;
   --erp-card-color: #fff;
   --erp-navbar-color: #fff;
   --erp-sidebar-color: #405189;
@@ -209,11 +210,13 @@ body,
 
   --erp-bg-color: #1a1d21;
   --erp-card-color: #212529;
+  --erp-input-border : #292e32;
   --erp-navbar-color: #292e32;
   --erp-sidebar-color: #212529;
   --erp-text-color: #fff;
   --erp-link-color: #fff;
   --erp-input-bg-color: #282b2e;
+  --erp-table-bottom-border : #ced4da;
 }
 
 /* .wrap {
@@ -346,7 +349,7 @@ a {
 }
 
 .black_300 {
-  color: var(--erp-black-300);
+  color: var(--erp-text-color);
 }
 
 .text_black {
@@ -371,11 +374,13 @@ a {
   -webkit-box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
   box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
   border: 0px;
+  background-color: var(--erp-card-color);
+
 }
 
 .card-header {
   padding: 1rem 1rem;
-  background-color: var(--erp-white-color);
+  background-color: var(--erp-card-color);
   border-bottom: 0px;
 }
 
@@ -397,7 +402,11 @@ a {
   border: 0px solid;
   border-bottom: 1px solid var(--erp-gray-200);
 }
+.table>:not(caption) 
 
+{
+  border-bottom: var(--erp-table-bottom-border) !important;
+}
 .table-card td:first-child,
 .table-card th:first-child {
   padding-left: 16px;
@@ -416,10 +425,10 @@ a {
   -webkit-appearance: none;
   appearance: none;
   background-clip: padding-box;
-  background-color: var(--erp-white-color);
-  border: 1px solid #ced4da !important;
+  background-color: var(--erp-card-color);
+  border: 1px solid var(  --erp-input-border) !important;
   border-radius: 0.25rem !important;
-  color: #212529;
+  color: var(--erp-text-color);
   display: block;
   font-size: var(--erp-fs-s) !important;
   font-weight: 400;
@@ -428,7 +437,35 @@ a {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !important;
   width: 100%;
 }
+.form-control.search{
+  background-color: var(--erp-input-bg-color) !important;
 
+}
+.form-control.search::placeholder{
+  color: var(--erp-text-mute) !important;;
+}
+form input  {
+  background-color: var(--erp-input-bg-color) !important;
+}
+form input::placeholder{
+  color: var(--erp-text-mute) !important;
+
+}
+.form-select {
+  background-color: var(--erp-input-bg-color) !important;
+
+}
+.form-select::placeholder {
+  color: var(--erp-text-mute) !important;
+}
+
+form textarea{
+  background-color: var(--erp-input-bg-color) !important;
+}
+form textarea::placeholder{
+  color: var(--erp-text-mute) !important;
+
+ }
 li {
   list-style: none;
 }
