--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 html,
 body,
 #root,
@@ -154,8 +155,8 @@ body,
   /* Changing colors */
 
   --erp-bg-color: #f3f3f9;
-  --erp-input-border :#ced4da;
-  --erp-table-bottom-border : #fff;
+  --erp-input-border: #ced4da;
+  --erp-table-bottom-border: #fff;
   --erp-card-color: #fff;
   --erp-navbar-color: #fff;
   --erp-sidebar-color: #405189;
@@ -194,6 +195,7 @@ body,
   --erp-lh-400: 1.8;
   --erp-lh-500: 2;
 }
+
 /* Dark mode colors */
 .darkMode,
 [data-erp-theme="dark"] {
@@ -206,13 +208,13 @@ body,
 
   --erp-bg-color: #1a1d21;
   --erp-card-color: #212529;
-  --erp-input-border : #292e32;
+  --erp-input-border: #292e32;
   --erp-navbar-color: #292e32;
   --erp-sidebar-color: #212529;
   --erp-text-color: #fff;
   --erp-link-color: #fff;
   --erp-input-bg-color: #282b2e;
-  --erp-table-bottom-border : #ced4da;
+  --erp-table-bottom-border: #ced4da;
 }
 
 /* .wrap {
@@ -228,12 +230,15 @@ body,
   display: flex;
   position: relative;
 }
+
 .font-size-xxs {
   font-size: var(--erp-fs-xxs);
 }
+
 .fs-xs {
   font-size: var(--erp-fs-xs);
 }
+
 .fs-s {
   font-size: var(--erp-fs-s);
 }
@@ -245,24 +250,31 @@ body,
 .fs-lg {
   font-size: var(--erp-fs-l);
 }
+
 .fs-7 {
   font-size: var(--erp-fs-7);
 }
+
 .fs-13 {
   font-size: var(--erp-fs-13);
 }
+
 .fs-14 {
   font-size: var(--erp-fs-14);
 }
+
 .fs-16 {
   font-size: var(--erp-fs-16);
 }
+
 .fs-17 {
   font-size: var(--erp-fs-17);
 }
+
 .fs-18 {
   font-size: var(--erp-fs-18);
 }
+
 .fs-20 {
   font-size: var(--erp-fs-20);
 }
@@ -287,9 +299,11 @@ body,
 .fw-500 {
   font-weight: var(--erp-fw-500);
 }
+
 .fw-600 {
   font-weight: var(--erp-fw-600);
 }
+
 .fw-700 {
   font-weight: var(--erp-fw-700);
 }
@@ -326,13 +340,16 @@ body,
   text-decoration: underline;
   color: var(--erp-black-300);
 }
+
 a {
   text-decoration: none !important;
   color: var(--erp-black-300);
 }
+
 .black_300 {
-  color: var(--erp-text-color);
+  color: var(--erp-text-color) !important;
 }
+
 .text-mute {
   color: var(--erp-text-mute) !important;
 }
@@ -340,6 +357,7 @@ a {
 .button_color {
   color: var(--erp-white-color) !important;
 }
+
 .form-control #border_none {
   border: none;
 }
@@ -353,6 +371,7 @@ a {
   background-color: var(--erp-card-color);
 
 }
+
 .card-header {
   padding: 1rem 1rem;
   background-color: var(--erp-card-color);
@@ -365,39 +384,43 @@ a {
   flex: 1 1 auto;
   padding: 1rem 1rem;
 }
+
 .table_icons {
   font-style: normal;
   font-size: 16px !important;
   font-weight: 400;
 }
+
 .table-card {
   margin: -1rem -1rem;
   border: 0px solid;
   border-bottom: 1px solid var(--erp-gray-200);
 }
-.table>:not(caption) 
 
-{
+.table>:not(caption) {
   border-bottom: var(--erp-table-bottom-border) !important;
 }
+
 .table-card td:first-child,
 .table-card th:first-child {
   padding-left: 16px;
 }
 
-.table > thead {
+.table>thead {
   background-color: #f3f6f9;
 }
+
 .table td,
 .table th {
   line-height: 1.5;
 }
+
 .form-control {
   -webkit-appearance: none;
   appearance: none;
   background-clip: padding-box;
   background-color: var(--erp-card-color);
-  border: 1px solid var(  --erp-input-border) !important;
+  border: 1px solid var(--erp-input-border) !important;
   border-radius: 0.25rem !important;
   color: var(--erp-text-color);
   display: block;
@@ -408,35 +431,44 @@ a {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !important;
   width: 100%;
 }
-.form-control.search{
+
+.form-control.search {
   background-color: var(--erp-input-bg-color) !important;
 
 }
-.form-control.search::placeholder{
-  color: var(--erp-text-mute) !important;;
+
+.form-control.search::placeholder {
+  color: var(--erp-text-mute) !important;
+  ;
 }
-form input  {
+
+form input {
   background-color: var(--erp-input-bg-color) !important;
 }
-form input::placeholder{
+
+form input::placeholder {
   color: var(--erp-text-mute) !important;
 
 }
+
 .form-select {
   background-color: var(--erp-input-bg-color) !important;
 
 }
+
 .form-select::placeholder {
   color: var(--erp-text-mute) !important;
 }
 
-form textarea{
+form textarea {
   background-color: var(--erp-input-bg-color) !important;
 }
-form textarea::placeholder{
+
+form textarea::placeholder {
   color: var(--erp-text-mute) !important;
 
- }
+}
+
 li {
   list-style: none;
 }
@@ -446,12 +478,14 @@ h1 {
   font-size: 1.5rem;
   color: #000;
 }
+
 /* toggle */
 .form-check-input:checked {
   background-color: #878a99;
   border-color: #878a99;
   border: 5px;
 }
+
 .form-check-input:focus {
   border-color: #878a99;
   outline: 0;
@@ -513,10 +547,12 @@ h1 {
   position: relative;
   padding-left: 44px;
 }
+
 .btn-label.right {
   padding-left: 0.9rem;
   padding-right: 44px;
 }
+
 .btn-label .label-icon {
   position: absolute;
   width: 35.5px;
@@ -535,19 +571,23 @@ h1 {
   -ms-flex-pack: center;
   justify-content: center;
 }
+
 .btn-label.right .label-icon {
   right: 0px;
   left: auto;
 }
+
 .btn-label:hover {
   color: #fff;
   background-color: #2da494 !important;
   border-color: #2da494;
 }
+
 .btn_primary {
   background-color: var(--erp-sidebar-color);
   color: white !important;
 }
+
 .btn_primary:hover {
   background-color: var(--erp-sidebar-color);
   color: #fff;
@@ -557,15 +597,18 @@ h1 {
 .bg-danger-subtle {
   background-color: #a0add8 !important;
 }
+
 .card_animate {
   transition: all 0.3s linear;
   webkit-box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
   /* box-shadow: 0px 5px 0px 5px solid var(--erp-gray-color); */
 }
+
 .card_animate:hover {
   transform: translateY(-7px);
   box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
 }
+
 /* tabs inside of fee details page */
 .nav-link {
   border-left: 3px solid var(--erp-bg-color) !important;
@@ -577,15 +620,18 @@ h1 {
   border-left: 3px solid var(--erp-sidebar-color) !important;
   border-bottom: 3px solid var(--erp-sidebar-color) !important;
   color: #000 !important;
-    background-color: #fff !important;
+  background-color: #fff !important;
 }
 
-.thead-fixed{
+.thead-fixed {
   position: sticky;
   top: 0;
   z-index: 1;
 }
+
 .table-container {
-  height: 500px; /* Set the height of the container */
-  overflow-y: auto; /* Enable vertical scrolling */
+  height: 500px;
+  /* Set the height of the container */
+  overflow-y: auto;
+  /* Enable vertical scrolling */
 }
