--- a/src/assets/css/common/Page.css
+++ b/src/assets/css/common/Page.css
@@ -1,4 +1,4 @@
-.ribbon-box.right.ribbon-box .ribbon-two span {
+/* .ribbon-box.right.ribbon-box .ribbon-two span {
     left: auto;
     right: -21px;
     -webkit-transform: rotate(45deg);
@@ -123,4 +123,4 @@
 .fs-12 {
     font-size: var(--erp-fs-s);
   
-}
+} */
