--- a/src/index.css
+++ b/src/index.css
@@ -367,7 +367,7 @@ a {
 
 .card {
   border-radius: 0.375rem !important;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
   -webkit-box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
   box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
   border: 0px;
