--- a/src/components/pages/Student/studentData/StudentIdCard.css
+++ b/src/components/pages/Student/studentData/StudentIdCard.css
@@ -4,7 +4,7 @@
     align-items: center;
   }
   .idcard1 {
-    background-image: url(../../../../images/student_idCard_images/);
+    background-image: url(../../../../images/student_idCard_images/Tesks_Logo.png);
     background-repeat: no-repeat;
   
     width: 30rem;
